2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03657] fputs -> Strfputs
	* form.c (form_fputs_decode): use Strfputs()

2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03655] Re: file.c:image_source when undef USE_IMAGE
	* map.c (follow_map_menu): fix warnings

2003-01-19  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03654] file.c:image_source when undef USE_IMAGE
	* file.c (readHeader): image_source ifdef USE_IMAGE
		(loadGeneralFile): ditto
		(uncompress_stream): ditto

2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03653] SourceForge.net: 576032 w3m https crashes with OpenSSL-0.9.7
	* istream.c (ssl_check_cert_ident): use sk_GENERAL_NAME_free()

2003-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03652] Re: Debian bug #176981
	* file.c (checkHeader): always remove_space
		(loadGeneralFile): no need remove_space

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03651] Debian bug #176981
	* file.c (checkRedirection): added
		(loadGeneralFile): check redirection
				t_buf only is created when it is NULL
				remove_space

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03647] expandName() and expandPath()
	* etc.c (openSecretFile): use expandPath
		(expandName): rewrite
		(file_to_url): use expandPath
	* file.c (_doFileCopy): use expandPath
		(doFileSave): use expandPath
	* indep.c (expandPath): rewrite
	* linein.c (inputLineHistSearch): use expandPath
		(next_dcompl): use expandPath
		(doComplete): use expandPath
	* local.c (set_cgi_environ): rewrite
	* mailcap.c (loadMailcap): use expandPath
	* main.c (svBuf): use expandPath
		(addDownloadList): use expandPath
	* rc.c (init_rc): use expandPath
		(rcFile): rewrite
		(auxbinFile): use expandPath
		(libFile): use expandPath
		(etcFile): use expandPath
		(helpFile): use expandPath
	* url.c (loadMimeTypes): use expandPath
		(loadURIMethods): use expandPath

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
